img change name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("./_28x_xi85macw6_2722310687.jpg");
+  background-image: url("./img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
